fix dialog height on smaller screens

--- a/apps/editor/electron-app/src/renderer/src/index.css
+++ b/apps/editor/electron-app/src/renderer/src/index.css
@@ -52,10 +52,6 @@
       0px 0px 3px #000;
   }
 
-  .max-h-4xl {
-    max-height: 56rem;
-  }
-
   .region-drag {
     -webkit-app-region: drag;
   }
